# FGMS_DIS

./: .gitignore
MultiplayerServer/fgms-fgms-0-x/: CMakeLists.txt
MultiplayerServer/fgms-fgms-0-x/builfiles/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  LibCLI.vcxproj  LibCLI.vcxproj.filters  MultiPlayer.vcxproj  MultiPlayer.vcxproj.filters  Plib.vcxproj  Plib.vcxproj.filters  SGdebug.vcxproj  SGdebug.vcxproj.filters  UpgradeLog.XML  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  fg_server.vcxproj  fg_server.vcxproj.filters  fgms.opensdf  fgms.sln  fgms.vcxproj  fgms.vcxproj.filters  install_manifest.txt  unistd.h
MultiplayerServer/fgms-fgms-0-x/builfiles/ALL_BUILD.dir/Debug/: BuildLog.htm
MultiplayerServer/fgms-fgms-0-x/builfiles/ALL_BUILD.dir/Release/: BuildLog.htm
MultiplayerServer/fgms-fgms-0-x/builfiles/Debug/: entitytable.xml  fgmsd.exp
MultiplayerServer/fgms-fgms-0-x/builfiles/INSTALL.dir/Debug/: BuildLog.htm
MultiplayerServer/fgms-fgms-0-x/builfiles/Release/: DIS.exp  fgms.conf  fgms.exp
MultiplayerServer/fgms-fgms-0-x/contrib/fgtracker/: server.c
MultiplayerServer/fgms-fgms-0-x/docs/: fgms.css
MultiplayerServer/fgms-fgms-0-x/src/plib/: netSocket.cxx
MultiplayerServer/fgms-fgms-0-x/src/server/: CallSignManager.cpp  CallSignManager.h  DISBroker.cpp  DISBroker.h  DISMap.cpp  DISMap.h  EntityTable.cpp  EntityTable.h  Quat.cpp  Quat.h  dr.cpp  dr.h  fg_cli.cxx  fg_cli.hxx  fg_geometry.cxx  fg_geometry.hxx  fg_list.cxx  fg_server.cxx  fg_server.hxx  fg_tracker.cxx  fg_tracker.hxx  fg_util.cxx  fg_util.hxx  main.cxx
MultiplayerServer/fgms-fgms-0-x/src/simgear/: constants.h
fgms-0-x.git/: CMakeLists.txt
fgms-0-x.git/docs/: jquery.lightbox-0.5.js
fgms-0-x.git/fgms-nativ_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LibCLI.vcxproj  LibCLI.vcxproj.filters  MultiPlayer.vcxproj  MultiPlayer.vcxproj.filters  Plib.vcxproj  Plib.vcxproj.filters  SGdebug.vcxproj  SGdebug.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  fg_server.vcxproj  fg_server.vcxproj.filters  fgms.sln  fgms.vcxproj  fgms.vcxproj.filters
fgms-0-x.git/fgms-nativ_build/LibCLI.dir/Release/: custombuild.command.1.tlog
fgms-0-x.git/fgms-nativ_build/fg_server.dir/Debug/: fg_server.lastbuildstate
fgms-0-x.git/fgms-nativ_build/fg_server.dir/Release/: fg_server.lastbuildstate
fgms-0-x.git/fgms-nativ_build/fgms.dir/Debug/: fgmsd_manifest.rc
fgms-dis/: CMakeLists.txt
fgms-dis/contrib/fgtracker/: server.c
fgms-dis/docs/: jquery.lightbox-0.5.css
fgms-dis/src/dis_gateway/: CallSignManager.h  DISBroker.cpp  DISBroker.h  EntityTable.cpp  EntityTable.h  Quat.cpp  Quat.h  dr.cpp  dr.h
fgms-dis/src/libcli/: cli_client.cxx  cli_client.hxx  libcli.cxx  libcli.hxx
fgms-dis/src/openDIS/DIS/: EntityStatePdu.cpp
fgms-dis/src/server/: fg_common.hxx  fg_server.cxx  fg_server.cxx.old  fg_server.hxx  fg_tracker.cxx  fg_tracker.hxx  fg_util.cxx  fg_util.hxx
fgms-dis/src/simgear/debug/: logstream.hxx
openDIS-languages/cpp/tags/1.0/: build.xml
openDIS-languages/csharp/tags/1.0/: build.xml
openDIS-languages/csharp/trunk/: nbbuild.xml
openDIS-languages/csharp/trunk/nbproject/: project.properties  project.xml
openDIS-languages/java/tags/4.0/: README.html  build.xml
openDIS-languages/java/tags/4.01/: DIS2009.xml
openDIS-languages/java/tags/4.05/: DIS2009.xml  build.xml  disJaxb.xsd
openDIS-languages/java/trunk/: DIS1998.xml  build.xml  disJaxb.xsd  pom.xml
openDIS-languages/java/trunk/nbproject/: project.xml
openDIS-languages/javascript/client/: DIS1998.xml  README.txt  build.xml
openDIS-languages/javascript/websocketJettyServer/: README.txt  build.xml  wsTest.html.html
openDIS-languages/javascript/websocketJettyServer/nbproject/: project.properties  project.xml
openDIS-languages/objective-c/tags/1.0/: README.html  build.xml
openDIS-languages/objective-c/trunk/: DIS2012.xml  build.xml  nbbuild.xml
openDIS-languages/objective-c/trunk/Objc/: AcknowledgePdu.h  AcknowledgePdu.m  AcousticBeamData.h  AcousticBeamData.m  AcousticEmitterSystem.m  ActionRequestPdu.m  ActionResponsePdu.h  AggregateID.h  AggregateID.m  AggregateMarking.h  AggregateStatePdu.h  AggregateStatePdu.m  AggregateType.m  AngularVelocityVector.h  ApaData.h  ApaData.m  ArealObjectStatePdu.h  ArticulationParameter.h  ArticulationParameter.m  BeamData.h  ClockTime.m  CollisionElasticPdu.h  CommentPdu.h  CommentReliablePdu.h  CreateEntityReliablePdu.h  CreateEntityReliablePdu.m  DataQueryReliablePdu.m  DeadReckoningParameter.h  DetonationPdu.h  DetonationPdu.m  DisPoint.m  ElectronicEmissionBeamData.h  ElectronicEmissionBeamData.m  ElectronicEmissionSystemData.h  ElectronicEmissionSystemData.m  ElectronicEmissionsPdu.h  ElectronicEmissionsPdu.m  EntityID.h  EntityID.m  EntityInformationFamilyPdu.h  (+77 more)
openDIS-languages/objective-c/trunk/ObjcDis7/: AcknowledgePdu.m  ActionRequestPdu.m  ActionRequestReliablePdu.m  ActionResponseReliablePdu.h  AggregateIdentifier.m  AggregateMarking.h  AggregateMarking.m  AngleDeception.h  AngleDeception.m  AngularVelocityVector.m  Attribute.m  AttributePdu.m  BeamStatus.h  BeamStatus.m  BlankingSector.h  BlankingSector.m  ChangeOptions.m  ClockTime.h  ClockTime.m  CollisionElasticPdu.h  CollisionPdu.m  CommentReliablePdu.m  CommunicationsNodeID.h  CommunicationsNodeID.m  DataPdu.m  DataQueryDatumSpecification.m  DataReliablePdu.m  DatumSpecification.h  DatumSpecification.m  DeadReckoningParameters.h  DeadReckoningParameters.m  DesignatorPdu.h  DesignatorPdu.m  DetonationPdu.m  DirectedEnergyAreaAimpoint.h  DirectedEnergyDamage.h  DirectedEnergyTargetEnergyDeposition.h  DirectedEnergyTargetEnergyDeposition.m  DistributedEmissionsFamilyPdu.m  EEFundamentalParameterData.h  (+117 more)
openDIS-languages/objective-c/trunk/ObjcUtils/: DataInput.h  DataInput.m  DataOutput.h  Network.h  Network.m  PduFactory.h
openDIS-languages/objective-c/trunk/nbproject/: project.properties  project.xml
openDIS-languages/python/trunk/: README.txt  espduCreator.py  p2pTest.py
(+1238 files in other folders)
